...
                    .background(color = Color.White, shape = RoundedCornerShape(round.dp))) {
              content()
            }

        IconButton(
            onClick = iconOnClick,
            modifier = Modifier.align(Alignment.TopEnd).testTag("TopRightIconInGradientBox")) {
              Icon(icon, iconDescriptor, tint = iconColor)
            }
      }
}

