...
fun IngredientNutritionEditFields(
    modifier: Modifier = Modifier,
    nutritionFields: MutableList<Nutrient> = mutableListOf()
) {

  // TODO: add a way to enter more fields/type of nutritents
  LazyColumn(modifier = modifier.testTag("NutritionInfoContainer")) {
    itemsIndexed(nutritionFields) { index, nutrient ->
      var text by remember {
        mutableStateOf(
            if (0 < nutrient.amount && nutrient.amount <= MAX_NUTRITION_AMOUNT)
                nutrient.amount.toString()
            else "")
...
